Bug 152245 - Crash with copy-paste from Calc to Writer table with tracked changes
Summary: Crash with copy-paste from Calc to Writer table with tracked changes
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.4.3.2 release
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Cut-Copy Track-Changes-Table
  Show dependency treegraph
 
Reported: 2022-11-26 18:28 UTC by Ignacio
Modified: 2023-12-21 09:54 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
example ODT with table and tracked changes on (9.08 KB, application/vnd.oasis.opendocument.text)
2022-12-19 01:25 UTC, stragu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ignacio 2022-11-26 18:28:05 UTC
Description:
I'm working in a .docx file that has several graph and tables that i had to modify. For the second time, when i copy-paste a table from LibreOffice Calc to this document, all the LibreOffice suit froze. I tried to wait a few minutes, but still, the only way was to force the exit. 

Steps to Reproduce:
1. create a file in MS Word with tables
2. open the file in LO Writer
3. try to modify the tables by pasting content from LO Calc (same number of rows and columns) with "change control" enabled

Actual Results:
all the LibreOffice suite freeze and the only option is to force exit

Expected Results:
to paste the new values in each cell, marking them as changes to be accepted


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 7.4.3.2
Build ID: 40(Build:2)
CPU threads: 8; OS: Linux 6.0; UI render: default; VCL: gtk3
Locale: es-AR (es_AR.UTF-8); UI: es-ES
Calc: threaded
Comment 1 stragu 2022-12-19 00:34:50 UTC
No need to use MS Office or even the DOCX format to reproduce:

1. Open attachment (an ODS file with a table and tracked changes on)
2. Open a new Calc document
3. Copy a cell (even empty) from Calc and paste it into the Writer table

Result:
LO hangs.

Reproduced in:

Version: 7.2.7.2 / LibreOffice Community
Build ID: 8d71d29d553c0f7dcbfa38fbfda25ee34cce99a2
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: de-DE (en_AU.UTF-8); UI: en-US
Calc: threaded

Not reproducible in:

Version: 7.1.8.1 / LibreOffice Community
Build ID: e1f30c802c3269a1d052614453f260e49458c82c
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

László, you might be interested.
Comment 2 stragu 2022-12-19 00:50:12 UTC
Bibisected with 7.2 Linux repo, first bad commit:

commit 05366b8e6683363688de8708a3d88cf144c7a2bf
author	László Németh <nemeth@numbertext.org>	Wed May 19 12:22:24 2021 +0200
committer	László Németh <nemeth@numbertext.org>	Thu May 20 00:01:37 2021 +0200
tree b1890c7eef972f77e10704051ba4d5231674336b
parent cfe0e7dc4d32117ba604e713b8a70eb6576a1fa2

tdf#60382 sw offapi: add change tracking of table/row deletion

Change-Id: I2e3807cf8ae8212bd51c210ef1c20c85878d0da8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/115804
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
Comment 3 stragu 2022-12-19 01:25:41 UTC
Created attachment 184228 [details]
example ODT with table and tracked changes on
Comment 4 Commit Notification 2023-01-03 09:55:22 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c9129bd97a9514e5679ed65bdf5879718f1b476d

tdf#152245 sw change tracking: fix copy from Calc to Writer tables

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 László Németh 2023-01-03 09:58:34 UTC
@Ignacio, Stéphane: many thanks for the report and forwarding the issue!
Comment 6 Commit Notification 2023-01-03 11:24:31 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/61312cb3ec89730e23ae90a86381e71a94c7d297

tdf#152245 sw change tracking: fix copy from Calc to Writer tables

It will be available in 7.5.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 stragu 2023-01-09 09:14:59 UTC
Fix verified in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8ae84bb5566e12df64236a116b9d1889d6f5f052
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks everyone!

László, can we cherry pick for 7.4?
Comment 8 noblekeon 2023-09-20 02:31:16 UTC
László Németh pushed a fix for this problem.
It's now on the "libreoffice-7-5" release train:

https://git.libreoffice.org/core/commit/61312cb3ec89730e23ae90a86381e71a94c7d297 https://wordletoday.io/

Tracking changes from Calc to Writer (tdf#152245)

In version 7.5.0.2, it will be accessible.
Comment 9 jamieoliver0404 2023-11-28 02:10:12 UTC Comment hidden (spam)
Comment 10 techndsoft 2023-12-14 16:25:14 UTC Comment hidden (spam)
Comment 11 EveningGnoll 2023-12-21 09:37:09 UTC Comment hidden (spam)