tdf#152245 sw change tracking: fix copy from Calc to Writer tables

Pasting Calc tables into Writer tables uses temporary table
deletion, which never occured if change tracking was enabled,
resulting freezing. Fix this by disabling change tracking
during temporarily, also add a limit for other potential cases,
where it's not possible to delete the table.

Regression from commit 05366b8e6683363688de8708a3d88cf144c7a2bf
"tdf#60382 sw offapi: add change tracking of table/row deletion".

Change-Id: I57874fa658652b30fc78b267ab49a52d7277a838
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144946
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>